@@ -1,7 +1,7 @@
 ﻿//------------------------------------------------------------------------------
 // <auto-generated>
 //     This code was generated by a tool.
-//     Runtime Version:2.0.50727.5420
+//     Runtime Version:2.0.50727.4959
 //
 //     Changes to this file may cause incorrect behavior and will be lost if
 //     the code is regenerated.
@@ -220,19 +220,21 @@ namespace MySql.Data.Entity.Tests.Properties {
         ///   Looks up a localized string similar to SELECT
         ///1 AS C1, 
         ///Extent1.Id, 
-        ///Extent1.Freight, 
-        ///Extent1.StoreId
-        ///FROM Orders AS Extent1 INNER JOIN (SELECT
+        ///Extent1.Name, 
+        ///Join1.Id AS Id1, 
+        ///Join1.Name AS Name1, 
+        ///Join1.Id1 AS Id2, 
+        ///Join1.Name1 AS Name2
+        ///FROM Companies AS Extent1 INNER JOIN (SELECT
         ///Extent2.Id, 
         ///Extent2.Name, 
         ///Extent2.Age, 
         ///Extent3.Id AS Id1, 
         ///Extent3.Name AS Name1, 
-        ///Extent3.Address, 
-        ///Extent3.City, 
-        ///Extent3.State, 
-        ///Extent3.ZipCode
-        ///FROM Authors AS Extent2 INNER JOIN Stores AS Extent3 ON (Extent2.Id = Extent3.Id) OR ((Extent2.Id IS  NULL) AND (Extent3.Id IS  NULL))) AS Join1 ON (Extent1.Id = Join1.Id) OR ((Extent1.Id IS  NULL) AND (Join1.Id IS  NULL)).
+        ///Extent3.Pages, 
+        ///Extent3.Author_id, 
+        ///Extent3.Publisher_id
+        ///FROM Authors AS Extent2 INNER JOIN Books AS Extent3 ON Extent2.Id = Extent3.Id) AS Join1 ON Extent1.Id = Join1.Id.
         /// </summary>
         internal static string JoinOnRightSideNameClash {
             get {
@@ -604,6 +606,15 @@ namespace MySql.Data.Entity.Tests.Properties {
         internal static string SkipAndTakeWithOrdering {
             get {
                 return ResourceManager.GetString("SkipAndTakeWithOrdering", resourceCulture);
+            }
+        }
+        
+        /// <summary>
+        ///   Looks up a localized string similar to .
+        /// </summary>
+        internal static string String1 {
+            get {
+                return ResourceManager.GetString("String1", resourceCulture);
             }
         }
         
