@@ -224,19 +224,21 @@ FROM Employees AS Extent2 LEFT OUTER JOIN SalariedEmployees AS Extent3 ON Extent
     <value>SELECT
 1 AS C1, 
 Extent1.Id, 
-Extent1.Freight, 
-Extent1.StoreId
-FROM Orders AS Extent1 INNER JOIN (SELECT
+Extent1.Name, 
+Join1.Id AS Id1, 
+Join1.Name AS Name1, 
+Join1.Id1 AS Id2, 
+Join1.Name1 AS Name2
+FROM Companies AS Extent1 INNER JOIN (SELECT
 Extent2.Id, 
 Extent2.Name, 
 Extent2.Age, 
 Extent3.Id AS Id1, 
 Extent3.Name AS Name1, 
-Extent3.Address, 
-Extent3.City, 
-Extent3.State, 
-Extent3.ZipCode
-FROM Authors AS Extent2 INNER JOIN Stores AS Extent3 ON (Extent2.Id = Extent3.Id) OR ((Extent2.Id IS  NULL) AND (Extent3.Id IS  NULL))) AS Join1 ON (Extent1.Id = Join1.Id) OR ((Extent1.Id IS  NULL) AND (Join1.Id IS  NULL))</value>
+Extent3.Pages, 
+Extent3.Author_id, 
+Extent3.Publisher_id
+FROM Authors AS Extent2 INNER JOIN Books AS Extent3 ON Extent2.Id = Extent3.Id) AS Join1 ON Extent1.Id = Join1.Id</value>
   </data>
   <data name="MaxInSubQuery1" xml:space="preserve">
     <value>SELECT
@@ -490,6 +492,9 @@ Extent1.ZipCode,
 FROM Companies AS Extent1) AS Project1
  ORDER BY 
 Project1.Name DESC LIMIT 2,2</value>
+  </data>
+  <data name="String1" xml:space="preserve">
+    <value />
   </data>
   <data name="SumSimple" xml:space="preserve">
     <value>SELECT
