@@ -37,6 +37,7 @@
 - Introduced a new unit test to ensure a commit will not timeout after a heavly load of inserts (MySQL bug #58004).
 - Fixed MySqlProviderManifest.GetStoreSchemaDescription() to return the correct schema definition depending
   on the server version.
+- added the ability to raise a join on the right side of a join to a derived table in EF code generation
 
 Version 6.0.7
 - Fix authorization popup after modifying stored procedure in VS (Bug #44715)
